#16 fix layout issue with long message

--- a/src/app/core/headerbar/headerbar.component.scss
+++ b/src/app/core/headerbar/headerbar.component.scss
@@ -1,7 +1,3 @@
-.dropdown-menu:hover {
-  display: block;
-}
-
 .link-cursor {
   cursor: pointer;
 }
